--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
----
+ï»¿---
 layout: default
-title: ÎÒµÄBlog
+title: æˆ‘çš„Blog
 ---
 
 <h2>{{ page.title }}</h2>
-<p>×îĞÂÎÄÕÂ</p>
+<p>æœ€æ–°æ–‡ç« </p>
 <ul>
 	{% for post in site.posts %}
 	<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
